--- a/nginx_default.conf
+++ b/nginx_default.conf
@@ -8,7 +8,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri /ru/$uri;
+        try_files $uri $uri/index.html /ru/$uri /ru/$uri/index.html;
     }
 
     #error_page  404              /404.html;
